fix overflow animation broken

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,10 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body{
+  overflow: hidden;
+}
+
 html {
   scroll-behavior: smooth;
 }
