--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
     padding: 0px 80px;
     height: 80px;
     width: 100%;
+    overflow: hidden;
 }
 
 .logo {
