--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -4,6 +4,7 @@
     height: calc(100vh - 80px);
     justify-content: space-around;
     align-items: center;
+    overflow: hidden;
 }
 
 .heroContent {
