--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -8,6 +8,7 @@
     width: 100%;
     padding: 100px 20px;
     gap: 40px;
+    overflow: hidden;
 }
 
 .container h3 {
